meja/tests/open-types.stderr
File "tests/open-types.meja", line 27, characters 28-32:
Error: Unbound constructor true.
